fixed text size

--- a/css/custom.css
+++ b/css/custom.css
@@ -123,7 +123,7 @@ body {
 	border-bottom: 1px solid;
 }
 .content {
-	font-size:xx-large;
+	font-size:x-large;
 	font-weight:300;
 	padding: 2em;
 	margin: auto;
