little more space in events

--- a/css/custom.css
+++ b/css/custom.css
@@ -227,6 +227,7 @@ font-weight:600;
 font-size: x-large;
 font-weight: inherit;
 margin: 0;
+margin-top:5px;
 margin-left: 20px;
 }
 
@@ -238,6 +239,7 @@ font-weight: inherit;
 font-size: large;
 font-weight: inherit;
 margin: 0;
+margin-top:5px;
 margin-left: 20px;
 }
 
