--- a/css/custom.css
+++ b/css/custom.css
@@ -4,7 +4,7 @@ nav ul {
   text-align: center;
   padding: 0;
   margin: 0;
-  background-color: #800080;
+  background-color: #9b49ce;
 }
 nav li {
   font-family: 'Roboto', sans-serif;
@@ -23,13 +23,13 @@ nav a {
 }
  
 nav a:hover {
-  background-color: #cd87ef;
+  background-color: #c5a6e8;
   color: white;
 }
  
 nav a.active {
   background-color: #fff;
-  color: #800080;
+  color: #9b49ce;
   cursor: default;
 }
  
@@ -50,7 +50,7 @@ nav a.active {
     margin: 0 auto;
   }
   nav {
-    background-color: #800080;
+    background-color: #9b49ce;
   }
 
 }
@@ -65,6 +65,8 @@ nav a.active {
 }
 .logo{
 	margin: auto;
+	width: 350px;
+	height:350px;
 }	
 .title {
 	margin: auto;
@@ -145,7 +147,7 @@ nav a.active {
 /**** Buttony things ****/
 
 .button {
-   border: 3px solid #800080;
+   border: 3px solid #9b49ce;
    text-align: center;
    padding: 8px 16px;
    border-radius: 10px;
@@ -154,7 +156,7 @@ nav a.active {
    font-weight: 300;
 }
 .button:hover {
-   border: 2px solid #cd97ef;
+   border: 2px solid #c5a6e8;
 }
 /********* Footer *********/
 footer{
